--- a/themes/selenium/layout.html
+++ b/themes/selenium/layout.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <nav>
-        <h1>Selenium</h1>
+        <h1><a href="#">Selenium</a></h1>
 
         <ul>
           <li><a href="#">About</a></li>
@@ -30,5 +30,41 @@
     <div class="container">
       {% block body %}{% endblock %}
     </div>
+
+    <footer>
+      <div class="container">
+        <ul>
+          <li>
+            <a href="#">About</a>
+
+            <ul>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Who made</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">Projects</a>
+
+            <ul>
+              <li><a href="#">WebDriver</a></li>
+              <li><a href="#">Grid</a></li>
+              <li><a href="#">Builder</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">Community</a>
+
+            <ul>
+              <li><a href="#">Mailing Lists</a></li>
+              <li><a href="#">Meetups</a></li>
+              <li><a href="#">IRC</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
