--- a/start.html
+++ b/start.html
@@ -84,7 +84,7 @@ another fundamental object type, the <code>WebElement</code>.
 <ul>
  <li><code>WebDriver</code> represents the browser
  <li><code>WebElement</code> represents a particular DOM node
-  (a control, e.g. a link or input field, &c.)
+  (a control, e.g. a link or input field, etc.)
 </ul>
 
 <p>Once you have have a reference to a web element that's been “found”,
