--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 <p>Here is one of the simplest Selenium instructions you can make:
 
-<code class=python><pre>from selenium import webdriver
+<pre><code class=python>from selenium import webdriver
 
 driver = webdriver.Firefox()
 driver.get("http://google.com/?hl=en")
 search_box = driver.find_element_by_id("q")
 search_box.send_keys("cheese")
-search_box.submit()</pre></code>
+search_box.submit()</code></pre>
 
 <p>After you've installed Selenium and run this program
  you will see the browser navigate to the search engine
