--- a/grid.html
+++ b/grid.html
@@ -144,7 +144,7 @@
  You start the hub by passing the <code>-role hub</code> flag
  to the standalone server:
 
-<code><pre>java -jar selenium-server-standalone.jar -role hub</pre></code>
+<pre><code>java -jar selenium-server-standalone.jar -role hub</code></pre>
 
 <p>The hub will listen to port 4444 by default.
  You can view the status of the hub by opening a browser window and navigating to
@@ -162,12 +162,12 @@
  to configure the hub when you start it.
  You can do it like so:
 
-<code><pre>java -jar selenium-server-standalone.jar -role hub -hubConfig hubConfig.json -debug</pre></code>
+<pre><code>java -jar selenium-server-standalone.jar -role hub -hubConfig hubConfig.json -debug</code></pre>
 
 <p>Below you will see an example of a <em>hubConfig.json</em> file.
  We will go into more detail on how to provide node configuration files in step 2.
 
-<code class=json><pre>{"_comment" : "Configuration for Hub - hubConfig.json",
+<pre><code class=json>{"_comment" : "Configuration for Hub - hubConfig.json",
   "host": ip,
   "maxSessions": 5,
   "port": 4444,
@@ -179,7 +179,7 @@
   "capabilityMatcher": "org.openqa.grid.internal.utils.DefaultCapabilityMatcher",
   "throwOnCapabilityNotPresent": true,
   "nodePolling": 180000,
-  "platform": "WINDOWS"}</pre></code>
+  "platform": "WINDOWS"}</code></pre>
 
 
 <h4>Step 2: Start the nodes</h4>
@@ -189,7 +189,7 @@
  or both at the same time,
  you use the same <em>selenium-server-standalone.jar</em> file to start the nodes:
 
-<code><pre>java -jar selenium-server-standalone.jar -role node -hub http://localhost:4444/grid/register</pre></code>
+<pre><code>java -jar selenium-server-standalone.jar -role node -hub http://localhost:4444/grid/register</code></pre>
 
 <p>The port defaults to 5555 if not specified whenever
  the <code>-role</code> option is provided and is not hub.
@@ -209,7 +209,7 @@
  on the command line as well,
  and these will be picked up and propagated to the nodes:
 
-<code><pre>-Dwebdriver.chrome.driver=chromedriver.exe</pre></code>
+<pre><code>-Dwebdriver.chrome.driver=chromedriver.exe</code></pre>
 
 
 <h5>Configuration of Node With JSON</h5>
@@ -217,11 +217,11 @@
 <p>You can also start grid nodes that are configured
  with a JSON configuration file
 
-<code><pre>java.exe -jar selenium-server-standalone.jar -role node -nodeConfig node1Config.json -Dwebdriver.chrome.driver=chromedriver.exe</pre></code>
+<pre><code>java.exe -jar selenium-server-standalone.jar -role node -nodeConfig node1Config.json -Dwebdriver.chrome.driver=chromedriver.exe</code></pre>
 
 <p>And here is an example of a <em>nodeConfig.json</em> file:
 
-<code class=json><pre>{"capabilities": [{"browserName": "firefox",
+<pre><code class=json>{"capabilities": [{"browserName": "firefox",
   "acceptSslCerts": true,
   "javascriptEnabled": true,
   "takesScreenshot": false,
@@ -247,4 +247,4 @@
   "host": ip,
   "register": true,
   "hubPort": 4444,
-  "maxSessions": 5}}</pre></code>
+  "maxSessions": 5}}</code></pre>
