Introduce basic stylesheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Selenium Documentation</title>
+<link rel=stylesheet href=se.css>
 
 <h1>The Selenium Browser Automation Project</h1>
 
